test_outputs/connlist/cudn_test_1_connlist_output.txt
Permitted connectivity analyzed in Pod network:
0.0.0.0-255.255.255.255[External] => green-namespace/green[VirtualMachine] : All Connections
0.0.0.0-255.255.255.255[External] => yellow-namespace/yellow[VirtualMachine] : All Connections
green-namespace/green[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
green-namespace/green[VirtualMachine] => yellow-namespace/yellow[VirtualMachine] : All Connections
yellow-namespace/yellow[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
yellow-namespace/yellow[VirtualMachine] => green-namespace/green[VirtualMachine] : All Connections

Permitted connectivity analyzed in primary CUDN happy-tenant:
0.0.0.0-255.255.255.255[External] => blue-namespace/blue[VirtualMachine] : All Connections
0.0.0.0-255.255.255.255[External] => red-namespace/red[VirtualMachine] : All Connections
blue-namespace/blue[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
blue-namespace/blue[VirtualMachine] => red-namespace/red[VirtualMachine] : All Connections
red-namespace/red[VirtualMachine] => 0.0.0.0-255.255.255.255[External] : All Connections
red-namespace/red[VirtualMachine] => blue-namespace/blue[VirtualMachine] : All Connections

Workload-to-Networks Mapping:
blue-namespace/blue[VirtualMachine]: happy-tenant[CUDN]
green-namespace/green[VirtualMachine]: pod_network
red-namespace/red[VirtualMachine]: happy-tenant[CUDN]
yellow-namespace/yellow[VirtualMachine]: pod_network
